--- a/changelog
+++ b/changelog
@@ -34,3 +34,4 @@
 - Update Velocity Download Permanently
 - Update PocketMine Download
 - Added SpongeVanilla Versions and Download
+- Add Check for Updates Button in Settings
