--- a/changelog
+++ b/changelog
@@ -1,3 +1,17 @@
+3.6 - December 5, 2023
+- Add Support for Updated Forge Server Files
+- Update to 1.19.4, 1.20, 1.20.1, 1.20.2 Java Edition
+- Update to 1.20.40 Bedrock Edition
+- Update Spigot Download
+- Update CraftBukkit Download
+- Update Purpur Download
+- Update Geyser Download
+- Update Mohist Download
+- Update Magma Download to 1.19.3
+- Update PocketMine Download
+- Update SpongeVanilla to 1.19.4, 1.20.1, 1.20.2
+- Update WaterdogPE Download
+
 3.5 - January 16, 2023
 - Created Windows Installer for LogSM. If you prefer installing it, download it from the website.
 - Created macOS Application for LogSM. Download the dmg file from the website to use.
@@ -19,18 +33,3 @@
 - Fix NanoLimbo Download
 - Remove Airplane Server Type as it is no longer supported
 - Airplane is now deprecated and removed from creating servers. If you try to launch one, it'll report to backup the files
-
-3.3 - August 19, 2022
-- Update to 1.19.2 Java Edition
-- Update SpongeVanilla Download
-- Update Spigot Download
-- Update Forge to 1.19.2
-- Fix & Update Mohist Download to 1.19.2
-- Update Magma Download to 1.18.2
-- Fix & Update CraftBukkit Download
-- Fix SpongeVanilla not showing 1.18.2
-- Fix & Update Bedrock Download
-- Change Download Progress to Progress Bar Window
-- Add EULA Prompt for Bedrock Edition Servers, and Java Edition Proxies
-- Fix Download Window not disappearing if Download fails
-- Optimize Some Code
